--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,13 @@
 i{
   cursor:pointer;
-  margin-right: 0.5vw;
-}
 
-input{
-  width:18vw;
+}
+hr{
+  margin-left: 15%;
+  margin-right: 15%;
+}
+/* input{
+  width:16vw;
   outline: none;
   background-color: #70795491;
   border:none;
@@ -16,7 +19,7 @@ input{
   -ms-border-radius: 8px;
   -o-border-radius: 8px;
   position: relative;
-}
+} */
 
 button{
   padding: 8px;
@@ -34,7 +37,7 @@ button{
 .fa-search{
   position: absolute;
   top:0.8vw;
-  left: 17vw;}
+  left: 19vw;}
 /* navBar */
 .bar_content{
   display: flex;
@@ -43,9 +46,9 @@ button{
   justify-content: space-around;
   align-items: center;
   width: 100%;
-  height: 14%;
+  height: 10%;
   color: black;
-  background-color: #70795455;
+  background-color: #6a725367;
 }
 .bar_information{
   display:flex;
@@ -58,8 +61,8 @@ button{
   justify-content: center; 
   align-items: center; 
   text-align: center;
-  width: 40px;
-  height: 40px;
+  width: 35px;
+  height: 35px;
   border-radius: 50%;
 }
 .none{
@@ -170,53 +173,86 @@ button{
   display:flex;
   align-items: center;
 }
+
 /* plants*/
 .loadingImg{
+  position: absolute;
   margin-top: 20vh;
   margin-left:35%
 }
 .errorImg{
+  position: absolute;
   margin-top:17%;
   margin-left:38%
 }
 .plants_page{
-  margin-top:15%;
-  display:flex;
-  flex-wrap:wrap;
-  text-align: center;
+ display: flex;
+ flex-wrap: wrap;
+}
+.page{
+  top: 32%;
+  left: 2.5vw;
+  right: 2.5vw;
+  position: fixed;
+  background-color:#eee;
+  box-shadow: 5px 5px 5px 1px rgba(0, 0, 0, 0.25);
+  height: 66%;
+  overflow: auto;
 }
 .plants_details{
-  margin-bottom:2vw;
-  margin-left:2.5vw;
-  border:#707954 solid 1px ;
-
+  margin-left: 2.7vw;
+  margin-top: 1vw;
+  text-align: center;
+  border:#707954 solid 1px;
+  overflow: hidden;
 }
 .plants_img{
-  width: 25vw;
-  height: 55vh;
-
+  width: 20vw;
+  height: 30vh;
 }
 /*panier*/
 .panier_bar{
-  background-color: #dfebbd96;
-  position:fixed ;
+  background-color: #d7ddc6a1;
   width: 100%;
-  height: 10%;
-  top:14%
+  height: 7%;
+  top: 10%;
+  display: flex;
+  position: fixed;
 }
+
+.fa-user-alt{
+  color: #707954;
+  font-size: 20px;
+}
+/*search_plant*/
 .search_plant{
-  top:18%;
-  margin-left: 40vw;
-  position: absolute;
+top:10.75%;
+margin-left: 12vw;
+position:absolute;
+}
+.search_plant input{
+  width:20vw;
+  outline: none;
+  /* background-color: #707954a9; */
+  border:none;
+  padding: 9px;
+  margin: 2px;
+  border-radius: 8px;
+  position: relative;
 }
 .panier{
+  cursor: pointer;
+  align-items: center;
+  display: flex;
+  margin-left: 75vw;
   position: absolute;
-  top:18%;
-  margin-left:90vw;
+}
+.panier:hover{
+  color:#707954
 }
 .fa-shopping-cart{
   color:#707954;
-  font-size: 35px;
+  font-size: 28px;
 }
 .panier_number{
   background:rgba(5, 4, 4, 0.85); 
@@ -225,28 +261,219 @@ button{
   align-items: center;
   color: white;
   text-align: center;
-  width: 20px;
-  height: 20px;
+  width: 16px;
+  height: 16px;
   font-size: 10px;
   border-radius: 50%;
   position: absolute;
-  /* top:0.1%; */
   margin-top: 0vh;
-   margin-left:2vw; 
+  margin-left:1.5vw; 
 }
+/*category*/
+.category{
+position:absolute;
+margin-top:36.5vh;
+display: flex;
+}
+.category_details{
+  margin-left: 2.3vw;
+  cursor: pointer;
+  border:#707954 solid 1px ;
+  text-align: center;
+  background-color: #707954;
+  border-radius: 5px;
+  box-shadow: 5px 5px 2px rgba(160, 159, 159, 0.479);
+}
+.category_img{
+height: 40vh;
+width:30vw
+}
+
 /*cartItems*/
 .cartItems{
-  margin-top:15%;
-  display:flex;
-  justify-content: space-around;
+  margin-top:2%;
+  margin-left: 15%;
+  display:grid;
+  grid-template-columns: 20% 20% 20% 20% 20%;
   align-items: center;
 }
 .cartItemsImg{
   height: 100px;
   width: 100px;
   border-radius: 10px ;
-  -webkit-border-radius: 10px ;
-  -moz-border-radius: 10px ;
-  -ms-border-radius: 10px ;
-  -o-border-radius: 10px ;
 }
+.cartItemsTot{
+display: flex;
+justify-content: space-around;
+text-align: center;
+}
+/*progressBar*/
+.circle_color_nonActive{
+  background-color: #eee;
+  border-color:#eee
+}
+.circle_color_active{
+  border-color: #707954;
+  background-color:#707954
+}
+.step1{
+  margin-left:19.5vw;
+}
+.step2 {
+margin-left:40vw;
+}
+.step3{
+  margin-left:60vw;
+}
+.step4{
+  margin-left:80vw;
+}
+progress {
+  margin-left:20.1vw;
+  margin-top:15vh;
+  -webkit-appearance: none;
+  width:60vw;
+  height: 1vh;
+}
+::-webkit-progress-bar {
+  background-color:#eee;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset;
+}
+::-webkit-progress-value{
+  background-color: #707954;
+}
+.circle_bar{
+top:91%;
+border-radius:50%;
+border: solid 1px ;
+box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset;
+width: 24px;
+height: 24px;
+position:absolute;
+border: none;
+}
+.translateBar{
+  height: 15vh;
+  width:90vw;
+  position: fixed;
+}
+.none{
+  display:none
+}
+.bar_info{
+  margin-left: -3.9vw;
+  width: 10vw;
+  text-align: center;
+  margin-top: 2vh;
+}
+.fa-shopping-bag{
+  margin-left: 0.4vw
+}
+.page1{
+  top:7%;
+}
+.page2{
+  top:7.5%
+}
+.page3{
+  top:7.5%
+}
+.page4{
+  top:7.5%
+}
+/*popUp*/
+.popUp{
+  display: grid;
+  grid-template-columns: 40% 55% 5% ;
+}
+.popUpText{
+  display :grid;
+  grid-template-rows: 20% 80%;
+  text-align: center;
+
+  margin-top: 20%;
+  margin-right: 20%;
+}
+.popUpImg{
+  margin-top:20%;
+  margin-left: 4vw;
+  width: 25vw;
+  height: 50vh;
+  border-radius: 1vh;
+}
+.btn_popUp{
+  margin-left: 2.5vw;
+}
+/*register page*/
+.register_page h3{
+  text-align: center;
+}
+.register_page{
+  margin-left: 0vw;
+  border-radius: 10px;
+  width:35vw;
+  margin-top: 0;
+height: 90vh;
+box-shadow: 0 2px 20px rgba(0, 0, 0, 0.25) ;
+}
+.formik_control{
+  margin-left: 15%;
+  margin-bottom: 20px;
+  padding: 10px;
+}
+.register_page .formik_control input{
+  height: 100%;
+  width: 80%;
+  border: none;
+  border-bottom: 2px solid silver;
+  outline: none;
+  background: none;
+  position: relative;
+}
+.formik_control input:focus,.formik_control input:valid{
+  transform:translateY(20px);
+}
+.register_page .formik_control label{
+  position:absolute;
+  color: gray;
+  margin-bottom: 1.5%;
+  transition: all 0.3s ease;
+
+}
+.error{
+  color: red;
+  font-size: small;
+}
+.btn2{
+  margin-top: 5vh;
+  margin-left: 12vw;
+}
+.btnLogin{
+  margin-left: 38%;
+}
+.login_h5{
+  margin-left: 36%;
+ cursor: pointer;
+}
+/*order*/
+.order_page{
+  margin-top:25%;
+}
+/* login*/
+.fa-chevron-down {
+  margin-top:0.2vw;
+  margin-left: 0.5vw;
+}
+.fa-user-alt, .fa-shopping-cart{
+  margin-right: 0.5vw;
+}
+.connect{
+  margin-left: 50vw;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+.connect:hover{
+  color:#707954
+}
+
